# sigchat

./: Cargo.toml  README.md
src/: PROTOS_README.md  _  account.rs  lib.rs  libsignal_service.rs  main.rs  manager.rs  signalservice.rs  update_signalservice.sh
src/account/: service_environment.rs
src/libsignal_service/: ciphers.rs  envelope.rs  errors.rs  registration.rs  service_address.rs  utils.rs
src/libsignal_service/ciphers/: devicename.rs  provisioning.rs
src/manager/: config.rs  group_permission.rs  libsignal.rs  link_state.rs  signal_ws.rs  trust_mode.rs
